src/main/java/com/example/simplefileshare/simplefileshare/error/models/DuplicateBucketException.java
package com.example.simplefileshare.simplefileshare.error.models;

public class DuplicateBucketException extends RuntimeException {
    public DuplicateBucketException(String message) {
        super(message);
    }
}
